cmake_minimum_required(VERSION 3.5)
project(base_platform)
include_directories("/home/jaineshdoshi/Documents/ArchC/ArchC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    bus/bus.cpp
    bus/bus.h
    bus/bus.o
    bus/libbus.a
    bus/Makefile
    memory/libmemory.a
    memory/Makefile
    memory/memory.cpp
    memory/memory.h
    memory/memory.o
    mips/powersc/acpower_table_mips_ASIC_freepdk45_125_250_400Mhz.csv
    mips/powersc/acpower_table_mips_ASIC_freepdk45_125Mhz.csv
    mips/powersc/acpower_table_mips_ASIC_freepdk45_250Mhz.csv
    mips/powersc/acpower_table_mips_ASIC_freepdk45_400Mhz.csv
    mips/powersc/acpower_table_mips_ASIC_freepdk45_50_125_250_400Mhz.csv
    mips/powersc/acpower_table_mips_ASIC_freepdk45_50Mhz.csv
    mips/powersc/acpower_table_mips_cycloneV_100Mhz.csv
    mips/powersc/acpower_table_mips_cycloneV_25Mhz.csv
    mips/powersc/acpower_table_mips_cycloneV_25Mhz_100Mhz.csv
    mips/powersc/acpower_table_mips_cycloneV_50Mhz.csv
    mips/powersc/acpower_table_mips_ep3sl50_100mhz.csv
    mips/powersc/acpower_table_mips_xc3s1200e_100Mhz.csv
    mips/powersc/acpower_table_mips_xc4vlx15_100Mhz.csv
    mips/powersc/acpower_table_mips_xc5vlx50t_100Mhz.csv
    mips/powersc/acpower_table_mips_xc6slx75_100Mhz.csv
    mips/arch_power_stats.H
    mips/compiler_info.ac
    mips/CONTRIBUTING.md
    mips/COPYING
    mips/defines_gdb
    mips/HISTORY.md
    mips/libmips.a
    mips/main.cpp
    mips/main.cpp.tmpl
    mips/main.o
    mips/Makefile
    mips/mips.ac
    mips/mips.cpp
    mips/mips.H
    mips/mips.o
    mips/mips_arch.cpp
    mips/mips_arch.H
    mips/mips_arch.o
    mips/mips_arch_ref.cpp
    mips/mips_arch_ref.H
    mips/mips_arch_ref.o
    mips/mips_bhv_macros.H
    mips/mips_block.ac
    mips/mips_gdb_funcs.cpp
    mips/mips_isa.ac
    mips/mips_isa.cpp
    mips/mips_isa.cpp.tmpl
    mips/mips_isa.H
    mips/mips_isa_helper.H
    mips/mips_isa_init.cpp
    mips/mips_nonblock.ac
    mips/mips_parms.H
    mips/mips_syscall.cpp
    mips/mips_syscall.H
    mips/mips_syscall.H.tmpl
    mips/mips_syscall.o
    mips/modifiers
    mips/README.md
    sw/hello.c
    sw/hello.elf
    sw/hello_world.c
    sw/hello_world.mips
    sw/hello_world.o
    sw/Makefile
    hello.h
    hello.x
    main.cpp
    Makefile
    platform.x)

add_executable(base_platform ${SOURCE_FILES})
